Instalación y configuración del entorno

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "Diego Rojas <diegorojas431@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
+  }
 }
