--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Diego Rojas <diegorojas431@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
